kustomize/parlasite-9/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: parlasite-9
  labels:
    app: parlasite-9
spec:
  replicas: 1
  selector:
    matchLabels:
      app: parlasite-9
  template:
    metadata:
      labels:
        app: parlasite-9
    spec:
      containers:
        - name: parlasite-9
          image: parlasite-bosna
          ports:
            - containerPort: 3066
          resources:
            requests:
              memory: 75Mi
              cpu: 50m
            limits:
              memory: 75Mi
              cpu: 50m
