kustomize/parlasite-9/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: parlasite-9
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - parlasite-bosna-9.lb.djnd.si
      secretName: parlasite-9-tls
  rules:
    - host: parlasite-bosna-9.lb.djnd.si
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: parlasite-9
                port:
                  number: 3066
